--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,5 +75,6 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
 }
